--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,4 +1,4 @@
---- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/jojoe77777/FormAPI
+--- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/Difz25/FormAPI
 branches:
 - master
 projects:
